[project]
name = "try-propelauth"
version = "0.1.0"
description = "PropelAuth for Streamlit"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "propelauth-py>=3.1.12",
    "streamlit>=1.32.2",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "black>=24.3.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
